name:                btc-markets
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Michaelt293/btc-markets#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Thomas
maintainer:          Michaelt293@gmail.com
copyright:           2018 Michael Thomas
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , aeson
                     , lens
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Michaelt293/btc-markets
